# zendesk-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SESSION_CONTEXT.md  mypy.ini  pyproject.toml  pytest.ini  test_complete_functionality.py  test_implementation.py  test_real_api.py  test_url.py
architecture/: README.md  c4-code.puml  c4-component.puml  c4-container.puml  c4-context.puml  generate_docs_pdf.py  generate_pdfs.sh
docs/: architecture.md  c4-component.puml  c4-container.puml  c4-deployment.puml  c4-system-context.puml
examples/: automation_scripts.py  library_usage.py  web_integration.py
src/ticketq/: __init__.py  __main__.py
src/ticketq/cli/: __init__.py  main.py
src/ticketq/cli/commands/: __init__.py  adapters.py  configure.py  tickets.py
src/ticketq/core/: __init__.py  factory.py  registry.py
src/ticketq/core/interfaces/: __init__.py  adapter.py  auth.py  client.py  models.py
src/ticketq/models/: __init__.py  exceptions.py  group.py  ticket.py  user.py
src/ticketq/utils/: __init__.py  config.py  logging.py
src/ticketq_zendesk/: __init__.py  adapter.py  auth.py  client.py  models.py
src/zendesk_cli/: __init__.py
src/zendesk_cli/cli/: __init__.py  formatters.py  main.py
src/zendesk_cli/cli/commands/: configure.py  tickets.py
src/zendesk_cli/models/: __init__.py  exceptions.py  ticket.py
src/zendesk_cli/services/: __init__.py  auth_service.py  ticket_service.py  zendesk_client.py
src/zendesk_cli/utils/: __init__.py  config.py  date_utils.py  logging.py
tests/: conftest.py  helpers.py
tests/integration/: __init__.py  test_api_integration.py  test_cli_error_handling.py  test_cli_integration.py  test_cli_workflow.py  test_error_handling.py  test_full_workflow.py  test_library_api.py  test_plugin_system.py  test_team_resolution.py
tests/unit/: test_cli_commands.py  test_config.py  test_date_utils.py  test_error_handling.py  test_formatters.py  test_library.py  test_models.py  test_ticket_service.py  test_zendesk_client.py
tests/unit/adapters/: test_zendesk_adapter.py  test_zendesk_models.py
tests/unit/ticketq/: test_cli_commands.py  test_factory.py  test_library.py  test_models.py  test_registry.py
zendesk-adapter/: README.md  pyproject.toml
zendesk-adapter/src/ticketq_zendesk/: __init__.py  adapter.py  auth.py  client.py  models.py
