[build-system]
requires = ["hatchling>=1.12.2"]
build-backend = "hatchling.build"

[project]
name = "zendesk-cli"
version = "0.1.0"
description = "CLI tool and library for managing Zendesk tickets"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core library dependencies
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "keyring>=24.3.0",
]

[project.optional-dependencies]
cli = [
    # CLI-specific dependencies
    "click>=8.1.0",
    "rich>=13.7.0",
]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.2.0",
    
    # Code Quality
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
zendesk = "zendesk_cli.cli.main:main"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # assert statements (fine for tests)
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.black]
target-version = ['py311']
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3