[build-system]
requires = ["hatchling>=1.12.2"]
build-backend = "hatchling.build"

[project]
name = "ticketq-zendesk"
version = "0.1.0"
description = "Zendesk adapter for TicketQ - Universal ticketing system CLI and library"
authors = [{name = "Jamie Mills", email = "jamie@jamiemills.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["zendesk", "tickets", "ticketq", "adapter", "plugin", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Customer Service",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Communications",
    "Environment :: Console",
]

dependencies = [
    # Core TicketQ dependency
    "ticketq>=0.1.0",
    # HTTP client for Zendesk API
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/jamiemills/ticketq"
Repository = "https://github.com/jamiemills/ticketq"
Issues = "https://github.com/jamiemills/ticketq/issues"
Documentation = "https://github.com/jamiemills/ticketq#zendesk-adapter"
"Zendesk API Docs" = "https://developer.zendesk.com/api-reference/"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.0",
    "responses>=0.20.0",
    
    # Code Quality
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=22.0",
]

# Register this adapter with TicketQ
[project.entry-points."ticketq.adapters"]
zendesk = "ticketq_zendesk.adapter:ZendeskAdapter"

[tool.hatch.build.targets.wheel]
packages = ["src/ticketq_zendesk"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # assert statements (fine for tests)
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "keyring.*",
]
ignore_missing_imports = true

[tool.black]
target-version = ['py38']
line-length = 88